[tool.poetry]
name = "gatech-slack-account-fixer"
version = "0"
description = "Corrects Slack account information, for use with Enterprise Grid migrations"
license = "MIT"
authors = ["Kristaps Berzinch <kristapsberzinch@gmail.com>"]
repository = "https://github.com/RoboJackets/gatech-slack-account-fixer"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
slack-sdk = "^3.4.2"
ldap3 = "^2.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "*"
flake8-black = "*"
flake8-bugbear = "*"
flake8-import-order = "*"
flake8-json = "*"
mypy = "*"
pylint = "*"

[tool.poetry.scripts]
gatech-slack-account-fixer = 'gatech_slack_account_fixer:main'

[tool.black]
line-length = 120
target-version = ['py38']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
