[tool.poetry]
name = "gatech-slack-account-fixer"
version = "0"
description = "Corrects Slack account information, for use with Enterprise Grid migrations"
license = "MIT"
authors = ["Kristaps Berzinch <kristapsberzinch@gmail.com>"]
repository = "https://github.com/RoboJackets/gatech-slack-account-fixer"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.0"
slack-sdk = "^3.35.0"
ldap3 = "^2.9"
ratelimiter = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^25.1.0"
flake8 = "*"
flake8-black = "*"
flake8-bugbear = "*"
flake8-import-order = "*"
flake8-json = "*"
mypy = "*"
pylint = "*"

[tool.poetry.scripts]
gatech-slack-account-fixer = 'gatech_slack_account_fixer:main'

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.4.20250611"

[tool.black]
line-length = 120
target-version = ['py312']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
